Fix bash and log issues